kubernetes/catalog/onedev/manifests/ci-agent.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onedev-agent
  namespace: onedev
  labels:
    app: onedev-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onedev-agent
  template:
    metadata:
      labels:
        app: onedev-agent
    spec:
      serviceAccountName: onedev-agent
      containers:
      - name: agent
        image: 1dev/agent:15.0.8
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: "2"
            memory: 4Gi
        volumeMounts:
        - name: docker-sock
          mountPath: /var/run/docker.sock
        - name: build-cache
          mountPath: /var/lib/containers
        securityContext:
          privileged: true
          runAsUser: 0
      volumes:
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
          type: Socket
      - name: build-cache
        emptyDir: {}
